fix(contributor): fixed contributor styles and loading only when visible

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -44,9 +44,9 @@
   }
 
   .dots {
-    left: -24px;
+    left: -30px;
     position: absolute;
-    top: 180px;
+    top: 270px;
     z-index: -4;
   }
 }
